[package]
name = "potassium"
version = "0.4.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/cohaereo/potassium"
authors = ["cohaereo <cohae@cohae.dev>"]
description = "A lean and mean job scheduler"
categories = ["concurrency", "asynchronous"]
keywords = ["fibers", "concurrency", "threading"]

[dependencies]
crossbeam-channel = "0.5.15"
crossbeam-deque = "0.8.6"
crossbeam-queue = "0.3.12"
fibrous = "0.2.0"
gdt-cpus = "25.12.0"
log = "0.4.28"
profiling = "1.0.17"
smallvec = "1.15.1"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "job_benchmarks"
harness = false

[profile.profiling]
inherits = "release"
debug = true

[features]
# Use a FIFO queue instead of a LIFO queue for worker threads.
fifo = []
