[package]
name = "potassium"
version = "0.4.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/cohaereo/potassium"
authors = ["cohaereo <cohae@cohae.dev>"]
description = "A lean and mean job scheduler"
categories = ["concurrency", "asynchronous"]
keywords = ["fibers", "concurrency", "threading"]

[dependencies]
crossbeam-channel = "0.5.15"
crossbeam-deque = "0.8.6"
crossbeam-queue = "0.3.12"
fibrous = "0.3.3"
gdt-cpus = "25.12.0"
log = "0.4.28"
profiling = "1.0.17"
smallvec = "1.15.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_Console"
] }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "job_benchmarks"
harness = false

[profile.profiling]
inherits = "release"
debug = true

[features]
# Use a FIFO queue instead of a LIFO queue for worker threads.
fifo = []
events = []
